# systemprogramming

hello_world/: user_info.txt
hello_world/TemperatureConverter/src/: main.rs
hello_world/attendance_verification_enum/src/: main.rs
hello_world/attendance_verification_io_operation/: Cargo.toml  user_info.txt
hello_world/attendance_verification_io_operation/src/: main.rs
hello_world/bank_account/src/: bank_account.rs  main.rs
hello_world/basic_closure/src/: main.rs
hello_world/book_catalog/src/: main.rs
hello_world/dog_api_example/src/: main.rs
hello_world/envionment_capture/: Cargo.toml
hello_world/envionment_capture/src/: main.rs
hello_world/guessing_game/src/: main.rs
hello_world/lazy_computation/: Cargo.toml
hello_world/lazy_computation/src/: main.rs
hello_world/number_analyzer/src/: main.rs
hello_world/rust_data_loader/: Cargo.toml  bitcoin_prices.csv  ethereum_prices.csv  sp500_prices.csv
hello_world/rust_data_loader/src/: main.rs
hello_world/rust_struct_testing/src/: main.rs  major.rs  student.rs
hello_world/rust_testing_lab/src/: main.rs
hello_world/sharing_counter/: Cargo.toml
hello_world/sharing_counter/src/: main.rs
hello_world/src/: main.rs
hello_world/three_threads/: Cargo.toml
hello_world/three_threads/src/: main.rs
hello_world/vector_tranformation/: Cargo.toml
hello_world/vector_tranformation/src/: main.rs
hello_world/website_status_checker/: Cargo.toml
hello_world/website_status_checker/src/: main.rs
